[package]
name = "rusty_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full", "time"] }
tonic = "0.6"
prost = "0.9"
log = "0.4"
env_logger = "0.9"
uuid = { version = "0.8", features = ["v4"] }
# TODO: Move web server to new package
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.6"
